--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,8 +1,15 @@
-.nav{
-    grid-area: n;
-    background-color: rgb(185, 121, 217);
-  }
+.nav {
+  grid-area: n;
+  background-color: rgb(185, 121, 217);
+  padding: 20px;
+}
 
 .item {
-    color: white
+  color: white;
+  text-decoration: none;
+}
+
+.active{
+  color: gold;
+  text-decoration: none;
 }
